@@ -5,7 +5,6 @@ import id.ac.ui.cs.advprog.hiringgo.manajemenlowongan.model.Lowongan;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 @Component
 public class FilterByStatus implements LowonganFilterStrategy {
 
@@ -20,7 +19,7 @@ public class FilterByStatus implements LowonganFilterStrategy {
 
         return lowonganList.stream()
                 .filter(lowongan -> lowongan.getStatusLowongan() == status)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
